Bug 154782 - A11Y sidebar: scrolling no longer works with mouse wheel
Summary: A11Y sidebar: scrolling no longer works with mouse wheel
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Sidebar-Accessibility Accessibility-Check 142978
  Show dependency treegraph
 
Reported: 2023-04-12 23:04 UTC by Gabor Kelemen (Collabora)
Modified: 2023-05-15 20:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-04-12 23:04:40 UTC
This is related to bug 148776

1. Open attachment 185791 [details] then look at the new Accessibility sidebar, listing a lot of issues.
2. Try to scroll the list with the mouse wheel
-> There is only about 1 line up/down movement. You need to use the vertical scroll bar to see the bottom of the list.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fc6806c4be8585ce0d35a6b581bf8b3dbf858500
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Seems to work fine under GTK3 vcl.

Likely a side effect from the dialog->sidebar conversion in bug 142978.
Comment 1 Commit Notification 2023-05-15 20:51:16 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/26df8770efecb6f98f05ceffa5c81905582d1d3b

tdf#154782 Fix scrolling in a11y sidebar

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.