tdf#154782 Fix scrolling in a11y sidebar

Doesn't need its own scroll handler anymore,
Sidebar has a generic scroll handler.

Change-Id: Ic56d1cfd7cde8ed81bf36f3302a128aa03ff6f27
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151769
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>